tests/language_modules/19_big_numbers/invalid_semantics/big_argument_count.vf
module BigArgumentCount

procedure main()
is
    let item: BigInteger = Big.float("1.0")
end main

end BigArgumentCount
